# witcherMod

./: .gitignore  CMakeLists.txt
injector/: CMakeLists.txt  main.cpp  mingw-unicode.cpp
modDll/: CMakeLists.txt  interprocess.hpp  mingw.condition_variable.h  mingw.future.h  mingw.mutex.h  mingw.shared_mutex.h  mingw.thread.h  moddll.hpp  stdafx.h
modDll/SPTLib/: MemUtils.cpp  MemUtils.hpp  patterns.hpp  sptlib-stdafx.hpp
modDll/SPTLib/Windows/: DetoursUtils.cpp  Hooks_win.cpp  MemUtils_win.cpp
modDll/Windows/: conutils.cpp  conutils.hpp  dllmain.cpp  interprocess.cpp
modDll/modules/: WitcherModule.cpp  WitcherModule.h  patterns.h
modDll/witcher/: structs.h  witcher.h  witchertypes.cpp  witchertypes.h
