cmake_minimum_required(VERSION 3.9)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY C:/Users/chatz/Desktop/dev/cpp/WitcherMod_msvc/build/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY C:/Users/chatz/Desktop/dev/cpp/WitcherMod_msvc/build/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY C:/Users/chatz/Desktop/dev/cpp/WitcherMod_msvc/build/)




add_subdirectory(injector)
add_subdirectory(modDll)
